--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="../Pictures/cat2.png" alt="Ann Li Logo" class="logo-img">
+                <img src="Portfolio/Pictures/cat2.png" alt="Ann Li Logo" class="logo-img">
                 <h1>Ann Li</h1>
             </div>
             <ul class="nav-links">
