--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -41,7 +41,7 @@
 
     <section class="middle">
         <h2>Hello! I am Ann Li.</h2>
-        <img src="../Pictures/me.png" alt="My Image">
+        <img src="Portfolio/Pictures/me.png" alt="My Image">
         <p>I like to design things</p>
         <a href="#" class="start-button">Get Started</a>
     </section>
