--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="Portfolio/Pictures/cat2.png" alt="Ann Li Logo" class="logo-img">
+                <img src="cat2.png" alt="Ann Li Logo" class="logo-img">
                 <h1>Ann Li</h1>
             </div>
             <ul class="nav-links">
@@ -41,7 +41,7 @@
 
     <section class="middle">
         <h2>Hello! I am Ann Li.</h2>
-        <img src="Portfolio/Pictures/me.png" alt="My Image">
+        <img src="me.png" alt="My Image">
         <p>I like to design things</p>
         <a href="#" class="start-button">Get Started</a>
     </section>
